<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_to">mailto:</string>
    <string name="email">alex126.1bat@gmail.com</string>
    <string name="support_theme">Тема: Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_data">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_intent_type">text/plain</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась.Проверьте\n
        подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="timer_start_value_00_00">00:00</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <plurals name="track">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>
    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_button_text">Создать</string>
    <string name="confirmation_dialog_title">Завершить создание плейлиста?</string>
    <string name="confirmation_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="confirmation_dialog_negative">Отмена</string>
    <string name="confirmation_dialog_positive">Завершить</string>
    <string name="playlist_created_snackbar">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_tracks_info">%1$s · %2$s</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks">Ваш плейлист пуст</string>
    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_dialog_positive">Удалить</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист %1$s?</string>
    <string name="delete_playlist_dialog_positive">Да</string>
    <string name="delete_playlist_dialog_negative">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="type_share_text">text/plain</string>
</resources>
