<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/main_activity_padding_start_end"
    android:orientation="vertical"
    android:background="@color/nav_tab_background">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        app:buttonGravity="center_vertical"
        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_themeSwitcher"
        style="@style/SwitcherStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/settings_padding_top_bottom"
        android:text="@string/dark_theme" />

    <FrameLayout
        android:id="@+id/fl_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_sendToSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/support" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_userAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:src="@drawable/arrow_right" />
    </FrameLayout>

</LinearLayout>
