<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/main_activity_padding_start_end"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        app:buttonGravity="center_vertical"
        app:navigationIcon="@drawable/back_space"
        app:title="@string/settings"
        app:titleTextColor="@color/button_icon_text" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_padding_top_bottom"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:layout_gravity="start" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:backgroundTint="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/settings_padding_top_bottom"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:backgroundTint="@color/white"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/settings_padding_top_bottom"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:backgroundTint="@color/white"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_padding_top_bottom"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:layout_gravity="start"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/arrow_right" />
    </FrameLayout>
</LinearLayout>
