<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/main_activity_padding_start_end">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        app:buttonGravity="center_vertical"
        app:navigationIcon="@drawable/back_space"
        app:title="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/search_linearlayout_round_corners"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/search_edit_text" />

        <EditText
            style="@style/SearchEditTextStyle"
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/search_input_line"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:textColor="@color/yp_black"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/clear_text"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/nothingFound"
        style="@style/SearchPlaceholderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_placeholder_margin_top"
        android:text="@string/nothing_found"
        android:textSize="@dimen/search_placeholder_text"
        app:drawableTopCompat="@drawable/nothing_found"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/connectionError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/search_placeholder_margin_top"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connection_error"
            android:layout_gravity="center"/>

        <TextView
            style="@style/SearchPlaceholderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/connection_error"
            android:lines="4"
            android:textSize="@dimen/search_placeholder_text"/>

        <ImageView
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:src="@drawable/button_update"
            android:layout_gravity="center"/>
    </LinearLayout>
    
    <TextView
        style="@style/SearchPlaceholderTextYouSearchedStyle"
        android:id="@+id/youSearched"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/you_searched_text_margin_top"
        android:layout_height="@dimen/text_you_searched"
        android:text="@string/you_searched"
        android:textSize="@dimen/search_placeholder_text"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        android:layout_marginTop="@dimen/margin_top" />

    <ImageView
        android:id="@+id/clearHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_padding_top_bottom"
        android:layout_marginBottom="@dimen/clear_history_margin_bottom"
        android:src="@drawable/clear_history_button"
        android:layout_gravity="center"
        android:visibility="gone"/>
</LinearLayout>
